
VERSION 1  INITIAL RELEASE
==========================

   Version 1.4 - Use Better Reflection and load exceptions on demand rather than preloading them
      22/01/2019 13:49  1.4.2  Minor code style fix
         5d379b0 minor styling ci fix
      22/01/2019 13:44  1.4.1  Drop support for php 7.1 and allowing to use any name for the generated exception
         3fd2268 - Allowing to generate an exception with any name without restriction - Refactored the naming of various classes and methods
         63eeae4 - drop 7.1 support (updated composer)
         a38ccb8 - drop 7.1 support testing for travis
         f66924b - minor typo on docs
      21/01/2019 23:56  1.4.0  initial release
         10aace0 - Fix autoloading issues - Use Better Reflection - Load Exception on call - Updated docs
         976ca6e update dependencies
         63d317e Fix docs css
         882fef0 Docs update (typos & bug)

   Version 1.3 - Added event handling support
      30/04/2018 19:51  1.3.1  Bug fixes & docs
      28/04/2018 03:53  1.3.0  initial release

   Version 1.2 - Generated exceptions are now compiled
      25/04/2018 13:12  1.2.4  Added post update cmd
      25/04/2018 12:50  1.2.3  Check for namespaces in generated exceptions
      25/04/2018 11:19  1.2.2  updated filesystem package
      25/04/2018 10:43  1.2.1  autoloader fix
      25/04/2018 00:00  1.2.0  initial release

   Version 1.1 - Added Hoa\Event support
      23/04/2018 19:55  1.1.0  initial release

   Version 1.0 - Initial Release
      23/04/2018 01:51  1.0.3  Added LICENSE
      23/04/2018 01:01  1.0.2  Added .gitkeep under tests/coverage and updated .gitignore
      23/04/2018 00:50  1.0.1  composer.json update
      22/04/2018 21:15  1.0.0  initial release